Chrome extension complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <input type="text" value="" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="saved-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE ALL</button>
     <ul id="un-el">
     </ul>
